Adding docs for added properties for inline title adding. (#39)

--- a/birch-artifact-grid-item.html
+++ b/birch-artifact-grid-item.html
@@ -153,6 +153,9 @@
         type: Object,
         value: function() { return {}; }
       },
+      /**
+       * If set, enables the user to add a title inline.
+      */
       inlineAddingEnabled: {
         type: Boolean,
         value: false
@@ -222,6 +225,9 @@
         type: Boolean,
         value: false
       },
+      /**
+       * Notifier for if the add title input is active.
+      */
       alertInputActive: {
         computed: '_computeIsActive(_titleInputActive)',
         notify: true
