Add info icon and translations (#41)

--- a/birch-artifact-grid-item.html
+++ b/birch-artifact-grid-item.html
@@ -76,6 +76,7 @@
         <!--Restricted-->
         <div class="restricted" hidden="[[!restricted]]">
             <wc-i18n class='fs-h5' key='birch-artifact-grid-item.restricted'></wc-i18n>
+            <!--<span class="info-icon"></span>-->
         </div>
 
         <template is='dom-if' if='[[showMessages]]'>
